--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <div class="blocks"></div>
         <div class="buttons">
-            <button type="button" id="addButton">+</button>
-            <button type="button" id="removeButton">-</button>
+            <button type="button" class="button" id="addButton">+</button>
+            <button type="button" class="button" id="removeButton">-</button>
         </div>
         <div class="mb">
             Letters: <input id="letters" type="text" />
@@ -30,7 +30,7 @@
             
         </div>
 
-        <div style="background-color: #ddd; padding: 10px;"> test </div>
+        <div style="background-color: #ddd; padding: 10px;" id="debug"> test </div>
 
     </div>
 
